--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
+<div>
+    <div>
+        <p>Header Logo</p>
+        <ul>
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
+    </div>
+    <div>
+        <div>
+            <p>This Website is awesome</p>
+            <p>
+                This website has some subtext that goes here under the main title. It's a smaller font and the color is
+                lower contrast.
+            </p>
+            <button>Sign up</button>
+        </div>
+        <div>
+            <p>this is a placeholder for an image</p>
+        </div>
+
+    </div>
+
+</div>
+<div></div>
+<div></div>
+<div></div>
 
 <body>
 
