--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     <div>
         <div>
             <p>This Website is awesome</p>
-            <p>
-                This website has some subtext that goes here under the main title. It's a smaller font and the color is
-                lower contrast.
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
             </p>
             <button>Sign up</button>
         </div>
