--- a/index.html
+++ b/index.html
@@ -19,20 +19,52 @@
     <div>
         <div>
             <p>This Website is awesome</p>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is
+                lower contrast.
             </p>
             <button>Sign up</button>
         </div>
         <div>
             <p>this is a placeholder for an image</p>
         </div>
-
     </div>
-
 </div>
-<div></div>
-<div></div>
-<div></div>
+<div>
+    <p>Some random information.</p>
+    <div>
+        <div>
+            <div></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div>
+            <div></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div>
+            <div></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div>
+            <div></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+    </div>
+</div>
+<div>
+    <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people
+        will actually read it. Who knows? All i know is that it looks nice.</p>
+    <p>-Thor, God of Thunder</p>
+</div>
+<div>
+    <div>
+        <p>Call to action! It's time!</p>
+        <p>Sign up for our product by clicking that button right over there!</p>
+    </div>
+    <button>Sign up</button>
+</div>
+<div>
+    <p>Copyright The Odin Project 2021</p>
+</div>
 
 <body>
 
