--- a/index.html
+++ b/index.html
@@ -7,67 +7,70 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
-<div>
-    <div>
-        <p>Header Logo</p>
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
-    </div>
-    <div>
-        <div>
-            <p>This Website is awesome</p>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is
-                lower contrast.
-            </p>
-            <button>Sign up</button>
-        </div>
-        <div>
-            <p>this is a placeholder for an image</p>
-        </div>
-    </div>
-</div>
-<div>
-    <p>Some random information.</p>
-    <div>
-        <div>
-            <div></div>
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div>
-            <div></div>
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div>
-            <div></div>
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div>
-            <div></div>
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-    </div>
-</div>
-<div>
-    <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people
-        will actually read it. Who knows? All i know is that it looks nice.</p>
-    <p>-Thor, God of Thunder</p>
-</div>
-<div>
-    <div>
-        <p>Call to action! It's time!</p>
-        <p>Sign up for our product by clicking that button right over there!</p>
-    </div>
-    <button>Sign up</button>
-</div>
-<div>
-    <p>Copyright The Odin Project 2021</p>
-</div>
+
 
 <body>
-
+    <div class="header">
+        <div>
+            <p class="logo">Header Logo</p>
+            <ul class="link">
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
+        <div>
+            <div>
+                <p class="main">This Website is awesome</p>
+                <p class="secondary">This website has some subtext that goes here under the main title. It's a smaller
+                    font and the color is
+                    lower contrast.
+                </p>
+                <button>Sign up</button>
+            </div>
+            <div>
+                <p>this is a placeholder for an image</p>
+            </div>
+        </div>
+    </div>
+    <div class="information">
+        <p class="information header">Some random information.</p>
+        <div>
+            <div>
+                <div></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <div></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <div></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <div></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
+    <div class="quote">
+        <p class="quote text">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
+            space, or maybe people will actually read it. Who knows? All i know is that it looks nice.
+        </p>
+        <p>-Thor, God of Thunder</p>
+    </div>
+    <div class="action">
+        <div>
+            <p>Call to action! It's time!</p>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button>Sign up</button>
+    </div>
+    <div class="footer">
+        <p>Copyright The Odin Project 2021</p>
+    </div>
 </body>
 
 </html>
