--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="information">
-        <p class="information header">Some random information.</p>
+        <p class="title">Some random information.</p>
         <div>
             <div>
                 <div></div>
