--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="header">
-        <div>
+        <div class="sub-header">
             <p class="logo">Header Logo</p>
             <ul class="link">
                 <li>header link one</li>
@@ -19,12 +19,12 @@
                 <li>header link three</li>
             </ul>
         </div>
-        <div>
-            <div>
+        <div class="hero">
+            <div class="text">
                 <p class="main">This Website is awesome</p>
-                <p class="secondary">This website has some subtext that goes here under the main title. It's a smaller
-                    font and the color is
-                    lower contrast.
+                <p class="secondary">
+                    This website has some subtext that goes here under the main title. It's a smaller font and the color
+                    is lower contrast.
                 </p>
                 <button>Sign up</button>
             </div>
@@ -56,15 +56,14 @@
     </div>
     <div class="quote">
         <p class="quote text">
-            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
-            space, or maybe people will actually read it. Who knows? All i know is that it looks nice.
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who know All i know is that it looks nice.
         </p>
-        <p>-Thor, God of Thunder</p>
+        <p class="quoter">-Thor, God of Thunder</p>
     </div>
     <div class="action">
-        <div>
-            <p>Call to action! It's time!</p>
-            <p>Sign up for our product by clicking that button right over there!</p>
+        <div class="text">
+            <p class="action-text">Call to action! It's time!</p>
+            <p class="sub-text">Sign up for our product by clicking that button right over there!</p>
         </div>
         <button>Sign up</button>
     </div>
