--- a/index.html
+++ b/index.html
@@ -28,35 +28,36 @@
                 </p>
                 <button>Sign up</button>
             </div>
-            <div>
+            <div class="placeholder">
                 <p>this is a placeholder for an image</p>
             </div>
         </div>
     </div>
     <div class="information">
         <p class="title">Some random information.</p>
-        <div>
-            <div>
-                <div></div>
+        <div class="container">
+            <div class="info-con">
+                <div class="p-img"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
-            <div>
-                <div></div>
+            <div class="info-con">
+                <div class="p-img"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
-            <div>
-                <div></div>
+            <div class="info-con">
+                <div class="p-img"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
-            <div>
-                <div></div>
+            <div class="info-con">
+                <div class="p-img"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
     </div>
     <div class="quote">
         <p class="quote text">
-            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who know All i know is that it looks nice.
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+            people will actually read it. Who know All i know is that it looks nice.
         </p>
         <p class="quoter">-Thor, God of Thunder</p>
     </div>
